--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
     "raw-loader": "^4.0.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
