--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Jacques Lucke",
   "license": "MIT",
   "devDependencies": {
+    "@types/qrcode": "^1.5.5",
     "html-webpack-plugin": "^5.6.0",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.5.1",
