--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build
         run: |
           npm install
-          npx webpack
+          npm run build
 
       - name: Upload artifact
         if: ${{ matrix.node-version == '22.x' }}
